--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- linking css file -->
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel = "icon" href = "images/student.png" type = "image/x-icon"> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </head>
 
@@ -24,9 +25,13 @@
                     <input class="form-control" type="text" id="name" name="name" required>
                 </div>
                 <div class="mb-3">
+                    <label class="control-label" for="date">Date of Birth:</label>
+                    <input class="form-control" id="date" name="date" type="date" min="1980-01-01" max="2000-01-01" required>
+                </div>
+                <!-- <div class="mb-3">
                     <label for="age" class="form-label">Age:</label>
                     <input class="form-control" type="number" id="age" name="age" min="15" max="25" required>
-                </div>
+                </div> -->
                 <div class="mb-3">
                     <label for="mobile" class="form-label">Mobile Number:</label>
                     <input class="form-control" type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required>
@@ -51,6 +56,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Age</th>
+                    <th>Date of Birth</th>
                     <th>Mobile Number</th>
                     <th>City</th>
                     <th>State</th>
